cmake_minimum_required(VERSION 3.27)
project(OOP_HW5)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP_HW5
        Direction.h
        GameBoard.h
        CellType.h
        BoardCell.h
        Utilities.h
        List.h
        MoveVehicle.h
        TransposeList.h
        RushHour.h
        BoardCellTest.h
        ConditionalTest.h
        EnumsTest.h
        FailTest.h
        GameBoardTest.h
        Int.h
        ListTest.h
        MoveVehicleTest.h
        RushHourTest.h
        TestMain.cpp
)
